add more test + filtering